--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "nodemon": "^3.0.1",
-    "npm": "^10.2.3"
+    "npm": "^10.2.3",
+    "cors": "^2.8.5"
   }
 }
